# opengl-template-cmake

./: CMakeLists.txt  README.md
src/: main.c
